--- a/home.html
+++ b/home.html
@@ -186,7 +186,7 @@
 
                             </div>
 
-                            <!-- ================Password=====JS start on line 120=============== -->
+                            <!-- ================Password=====apps.js start on line 120=============== -->
                             <div class="row">
                                 <input id="password" class="password" type="password" name="password"
                                     placeholder="Password" minlength="6" required>
