--- a/checkout.html
+++ b/checkout.html
@@ -25,7 +25,7 @@
             <div class="shop-items">
                 <div class="shop-item">
                     <span class="shop-item-title">Album 1</span>
-                    <img class="shop-item-image" src="images/Album1.png">
+                    <img class="shop-item-image" src="Images/Album1.png">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$12.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -33,7 +33,7 @@
                 </div>
                 <div class="shop-item">
                     <span class="shop-item-title">Album 2</span>
-                    <img class="shop-item-image" src="images/Album2.png">
+                    <img class="shop-item-image" src="Images/Album2.png">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$14.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="shop-item">
                     <span class="shop-item-title">Album 3</span>
-                    <img class="shop-item-image" src="images/Album3.png">
+                    <img class="shop-item-image" src="Images/Album3.png">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$9.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="shop-item">
                     <span class="shop-item-title">Album 4</span>
-                    <img class="shop-item-image" src="images/Album4.png">
+                    <img class="shop-item-image" src="Images/Album4.png">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$19.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -86,10 +86,32 @@
                 <span class="cart-quantity cart-header cart-column">QUANTITY</span>
             </div>
             <div class="cart-items">
+                <div class="cart-row">
+                    <div class="cart-item cart-column">
+                        <img class="cart-item-image" src="Images/Shirt.png" width="100" height="100">
+                        <span class="cart-item-title">T-Shirt</span>
+                    </div>
+                    <span class="cart-price cart-column">$19.99</span>
+                    <div class="cart-quantity cart-column">
+                        <input class="cart-quantity-input" type="number" value="1">
+                        <button class="btn btn-danger" type="button">REMOVE</button>
+                    </div>
+                </div>
+                <div class="cart-row">
+                    <div class="cart-item cart-column">
+                        <img class="cart-item-image" src="images/Album3.png" width="100" height="100">
+                        <span class="cart-item-title">Album 3</span>
+                    </div>
+                    <span class="cart-price cart-column">$9.99</span>
+                    <div class="cart-quantity cart-column">
+                        <input class="cart-quantity-input" type="number" value="2">
+                        <button class="btn btn-danger" type="button">REMOVE</button>
+                    </div>
+                </div>
             </div>
             <div class="cart-total">
                 <strong class="cart-total-title">Total</strong>
-                <span class="cart-total-price">$0</span>
+                <span class="cart-total-price">$39.97</span>
             </div>
             <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
         </section>
