--- a/home.html
+++ b/home.html
@@ -26,6 +26,13 @@
         <header class="header-title">
             <h1 class="compTitle">Kanie Kandies</h1>
             <h2 id="message1"></h2>
+            <!-- navigation menu START -->
+            <nav class="my-nav">
+                <a class="nav-menu" href="home.html">Home</a>
+                <a class="nav-menu" href="fortune.html">Fortune Teller</a>
+                <a class="nav-menu" href="checkout.html">Shopping Cart</a>
+            </nav>
+            <!-- navigation menu END -->
             <hr class="headLine">
             <div class="center-doggieCalc">
                 <input type="number" id="dog" placeholder="Enter dog age in Human Years" required />
@@ -36,12 +43,7 @@
                 <h2 id="dogAge">0</h2>
             </div>
             <hr class="headLine">
-            <!-- navigation menu START -->
-            <nav class="my-nav">
-                <a class="nav-menu" href="home.html">Home</a>
-                <a class="nav-menu" href="fortune.html">Fortune Teller</a>
-            </nav>
-            <!-- navigation menu END -->
+
             <!--Carousel and Dosage StART-->
             <div class="centerDosage">
                 <h2>Doggie CBD dosage!</h2>
@@ -82,8 +84,6 @@
                         <!--Carousel and Dosage END-->
                     </div>
                 </div>
-
-
         </header>
         <!--body content START-->
         <article>
@@ -177,7 +177,7 @@
                             <!-- ==================Email================= -->
                             <div class="row">
                                 <input class="email" type="text" name="email" min="7" placeholder="Email"
-                                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+                                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
                             </div>
 
                             <!-- ===============Phone Number=============== -->
