--- a/checkout.html
+++ b/checkout.html
@@ -41,61 +41,176 @@
         <!-- navigation menu END -->
 
         <!-- all items go inside this section -->
-        <section class="container content-section">
+        <!-- <section class="container content-section"> -->
 
-            <div class="shop-items">
-
-                <div class="shop-item">
-                    <span class="shop-item-title">Album 1</span>
-                    <img class="shop-item-image" src="Images/Album1.png">
-                    <div class="shop-item-details">
-                        <span class="shop-item-price">$12.99</span>
-                        <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+        <!-- <div class="shop-items"> -->
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="shop-item">
+                            <span class="shop-item-title">Sample Pack</span>
+                            <img class="shop-item-image" src="Images/Album4.png">
+                            <div class="shop-item-details">
+                                <span class="shop-item-price">$15.99</span>
+                                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="shop-item">
+                            <span class="shop-item-title">Meat Treats</span>
+                            <img class="shop-item-image" src="Images/Album4.png">
+                            <div class="shop-item-details">
+                                <span class="shop-item-price">$12.99</span>
+                                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="shop-item">
+                            <span class="shop-item-title">Clean Breath CBD</span>
+                            <img class="shop-item-image" src="Images/Album4.png">
+                            <div class="shop-item-details">
+                                <span class="shop-item-price">$4.99</span>
+                                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="shop-item">
+                            <span class="shop-item-title">Bark Control CBD</span>
+                            <img class="shop-item-image" src="Images/Album4.png">
+                            <div class="shop-item-details">
+                                <span class="shop-item-price">$15.97</span>
+                                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
-                <div class="shop-item">
-                    <span class="shop-item-title">Album 2</span>
-                    <img class="shop-item-image" src="Images/Album2.png">
-                    <div class="shop-item-details">
-                        <span class="shop-item-price">$14.99</span>
-                        <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                <div class="row">
+                    <div class="col">
+                        <div class="shop-item">
+                            <span class="shop-item-title">Pet Tealeaf</span>
+                            <img class="shop-item-image" src="Images/Album4.png">
+                            <div class="shop-item-details">
+                                <span class="shop-item-price">$12.99</span>
+                                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="shop-item">
+                            <span class="shop-item-title">CBD For Anxiety</span>
+                            <img class="shop-item-image" src="Images/Album4.png">
+                            <div class="shop-item-details">
+                                <span class="shop-item-price">$12.99</span>
+                                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="shop-item">
+                            <span class="shop-item-title">CBD Meat Treats</span>
+                            <img class="shop-item-image" src="Images/Album4.png">
+                            <div class="shop-item-details">
+                                <span class="shop-item-price">$7.99</span>
+                                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="shop-item">
+                            <span class="shop-item-title">Shower Gel</span>
+                            <img class="shop-item-image" src="Images/Album4.png">
+                            <div class="shop-item-details">
+                                <span class="shop-item-price">$10.99</span>
+                                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
-                <div class="shop-item">
-                    <span class="shop-item-title">Album 3</span>
-                    <img class="shop-item-image" src="Images/Album3.png">
-                    <div class="shop-item-details">
-                        <span class="shop-item-price">$9.99</span>
-                        <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                <div class="row">
+                    <div class="col">
+                        <div class="shop-item">
+                            <span class="shop-item-title">Alternative Itch</span>
+                            <img class="shop-item-image" src="Images/Album4.png">
+                            <div class="shop-item-details">
+                                <span class="shop-item-price">$5.99</span>
+                                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="shop-item">
+                            <span class="shop-item-title">PB Treats</span>
+                            <img class="shop-item-image" src="Images/Album4.png">
+                            <div class="shop-item-details">
+                                <span class="shop-item-price">$4.99</span>
+                                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="shop-item">
+                            <span class="shop-item-title">Broad Spectrum</span>
+                            <img class="shop-item-image" src="Images/Album4.png">
+                            <div class="shop-item-details">
+                                <span class="shop-item-price">$17.99</span>
+                                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="shop-item">
+                            <span class="shop-item-title">Hemp Calming</span>
+                            <img class="shop-item-image" src="Images/Album4.png">
+                            <div class="shop-item-details">
+                                <span class="shop-item-price">$4.99</span>
+                                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
-                <div class="shop-item">
-                    <span class="shop-item-title">Album 4</span>
-                    <img class="shop-item-image" src="Images/Album4.png">
-                    <div class="shop-item-details">
-                        <span class="shop-item-price">$19.99</span>
-                        <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                <div class="row">
+                    <div class="col">
+                        <div class="col">
+                            <div class="shop-item">
+                                <span class="shop-item-title">Gummies</span>
+                                <img class="shop-item-image" src="Images/Album4.png">
+                                <div class="shop-item-details">
+                                    <span class="shop-item-price">$2.99</span>
+                                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-
-                <div class="shop-item">
-                    <span class="shop-item-title">Album 5</span>
-                    <img class="shop-item-image" src="Images/Album4.png">
-                    <div class="shop-item-details">
-                        <span class="shop-item-price">$1.99</span>
-                        <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                    <div class="col">
+                        <div class="col">
+                            <div class="shop-item">
+                                <span class="shop-item-title">ReLeaf Edibles</span>
+                                <img class="shop-item-image" src="Images/Album4.png">
+                                <div class="shop-item-details">
+                                    <span class="shop-item-price">$15.99</span>
+                                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-
-                <div class="shop-item">
-                    <span class="shop-item-title">Album 6</span>
-                    <img class="shop-item-image" src="Images/Album4.png">
-                    <div class="shop-item-details">
-                        <span class="shop-item-price">$3.99</span>
-                        <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                    <div class="col">
+                        <div class="col">
+                            <div class="shop-item">
+                                <span class="shop-item-title">Healthy Teeth</span>
+                                <img class="shop-item-image" src="Images/Album4.png">
+                                <div class="shop-item-details">
+                                    <span class="shop-item-price">$4.99</span>
+                                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
