home page fixed

--- a/home.html
+++ b/home.html
@@ -32,7 +32,10 @@
                 <a class="nav-menu" href="fortune.html">Fortune Teller</a>
                 <a class="nav-menu" href="checkout.html">Shopping Cart</a>
             </nav>
-            <!-- navigation menu END -->
+        </header>
+        <!-- navigation menu END -->
+
+        <section>
             <hr class="headLine">
             <div class="center-doggieCalc">
                 <input type="number" id="dog" placeholder="Enter dog age in Human Years" required />
@@ -84,7 +87,7 @@
                         <!--Carousel and Dosage END-->
                     </div>
                 </div>
-        </header>
+        </section>
         <!--body content START-->
         <article>
             <main class="center-main">
