--- a/checkout.html
+++ b/checkout.html
@@ -21,6 +21,7 @@
         <link rel="stylesheet" href="checkout.css">
         <title>Document</title>
     </head>
+    <!-- testing github push. delete when finish -->
 
     <body>
         <!-- navigation menu START -->
