--- a/checkout.html
+++ b/checkout.html
@@ -48,7 +48,7 @@
                     <div class="col">
                         <div class="shop-item">
                             <span class="shop-item-title">Sample Pack</span>
-                            <img class="shop-item-image" src="Images/Album4.png">
+                            <img class="shop-item-image" src="images/Album4.png">
                             <div class="shop-item-details">
                                 <span class="shop-item-price">$15.99</span>
                                 <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -58,7 +58,7 @@
                     <div class="col">
                         <div class="shop-item">
                             <span class="shop-item-title">Meat Treats</span>
-                            <img class="shop-item-image" src="Images/Album4.png">
+                            <img class="shop-item-image" src="images/Album4.png">
                             <div class="shop-item-details">
                                 <span class="shop-item-price">$12.99</span>
                                 <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -68,7 +68,7 @@
                     <div class="col">
                         <div class="shop-item">
                             <span class="shop-item-title">Clean Breath CBD</span>
-                            <img class="shop-item-image" src="Images/Album4.png">
+                            <img class="shop-item-image" src="images/Album4.png">
                             <div class="shop-item-details">
                                 <span class="shop-item-price">$4.99</span>
                                 <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -78,7 +78,7 @@
                     <div class="col">
                         <div class="shop-item">
                             <span class="shop-item-title">Bark Control CBD</span>
-                            <img class="shop-item-image" src="Images/Album4.png">
+                            <img class="shop-item-image" src="images/Album4.png">
                             <div class="shop-item-details">
                                 <span class="shop-item-price">$15.97</span>
                                 <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -91,7 +91,7 @@
                     <div class="col">
                         <div class="shop-item">
                             <span class="shop-item-title">Pet Tealeaf</span>
-                            <img class="shop-item-image" src="Images/Album4.png">
+                            <img class="shop-item-image" src="images/Album4.png">
                             <div class="shop-item-details">
                                 <span class="shop-item-price">$12.99</span>
                                 <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -101,7 +101,7 @@
                     <div class="col">
                         <div class="shop-item">
                             <span class="shop-item-title">CBD For Anxiety</span>
-                            <img class="shop-item-image" src="Images/Album4.png">
+                            <img class="shop-item-image" src="images/Album4.png">
                             <div class="shop-item-details">
                                 <span class="shop-item-price">$12.99</span>
                                 <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -111,7 +111,7 @@
                     <div class="col">
                         <div class="shop-item">
                             <span class="shop-item-title">CBD Meat Treats</span>
-                            <img class="shop-item-image" src="Images/Album4.png">
+                            <img class="shop-item-image" src="images/Album4.png">
                             <div class="shop-item-details">
                                 <span class="shop-item-price">$7.99</span>
                                 <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -121,7 +121,7 @@
                     <div class="col">
                         <div class="shop-item">
                             <span class="shop-item-title">Shower Gel</span>
-                            <img class="shop-item-image" src="Images/Album4.png">
+                            <img class="shop-item-image" src="images/Album4.png">
                             <div class="shop-item-details">
                                 <span class="shop-item-price">$10.99</span>
                                 <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -134,7 +134,7 @@
                     <div class="col">
                         <div class="shop-item">
                             <span class="shop-item-title">Alternative Itch</span>
-                            <img class="shop-item-image" src="Images/Album4.png">
+                            <img class="shop-item-image" src="images/Album4.png">
                             <div class="shop-item-details">
                                 <span class="shop-item-price">$5.99</span>
                                 <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -144,7 +144,7 @@
                     <div class="col">
                         <div class="shop-item">
                             <span class="shop-item-title">PB Treats</span>
-                            <img class="shop-item-image" src="Images/Album4.png">
+                            <img class="shop-item-image" src="images/Album4.png">
                             <div class="shop-item-details">
                                 <span class="shop-item-price">$4.99</span>
                                 <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -154,7 +154,7 @@
                     <div class="col">
                         <div class="shop-item">
                             <span class="shop-item-title">Broad Spectrum</span>
-                            <img class="shop-item-image" src="Images/Album4.png">
+                            <img class="shop-item-image" src="images/Album4.png">
                             <div class="shop-item-details">
                                 <span class="shop-item-price">$17.99</span>
                                 <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -164,7 +164,7 @@
                     <div class="col">
                         <div class="shop-item">
                             <span class="shop-item-title">Hemp Calming</span>
-                            <img class="shop-item-image" src="Images/Album4.png">
+                            <img class="shop-item-image" src="images/Album4.png">
                             <div class="shop-item-details">
                                 <span class="shop-item-price">$4.99</span>
                                 <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -178,7 +178,7 @@
                         <div class="col">
                             <div class="shop-item">
                                 <span class="shop-item-title">Gummies</span>
-                                <img class="shop-item-image" src="Images/Album4.png">
+                                <img class="shop-item-image" src="images/Album4.png">
                                 <div class="shop-item-details">
                                     <span class="shop-item-price">$2.99</span>
                                     <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -190,7 +190,7 @@
                         <div class="col">
                             <div class="shop-item">
                                 <span class="shop-item-title">ReLeaf Edibles</span>
-                                <img class="shop-item-image" src="Images/Album4.png">
+                                <img class="shop-item-image" src="images/Album4.png">
                                 <div class="shop-item-details">
                                     <span class="shop-item-price">$15.99</span>
                                     <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -202,7 +202,7 @@
                         <div class="col">
                             <div class="shop-item">
                                 <span class="shop-item-title">Healthy Teeth</span>
-                                <img class="shop-item-image" src="Images/Album4.png">
+                                <img class="shop-item-image" src="images/Album4.png">
                                 <div class="shop-item-details">
                                     <span class="shop-item-price">$4.99</span>
                                     <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
